# react-native-prose-editor

./: CHANGELOG.md  README.md  app.plugin.js  expo-module.config.json  package-lock.json  package.json
.github/workflows/: publish.yml
android/: build.gradle  consumer-rules.pro
example/: App.tsx  app.config.ts  constants.ts  package-lock.json  package.json  themePresets.ts
example/android/: gradle.properties  settings.gradle
example/components/: CollaborationPanel.tsx  EditorDemoCard.tsx  EditorSettingsPanel.tsx  ThemeSettingsCard.tsx  ToolbarItemsEditor.tsx  ToolbarSettingsPanel.tsx
ios/: EditorAddons.swift  EditorLayoutManager.swift  EditorTheme.swift  NativeEditorExpoView.swift  NativeEditorModule.swift  PositionBridge.swift  ReactNativeProseEditor.podspec  RenderBridge.swift  RichTextEditorView.swift
ios-tests/: project.yml
ios-tests/NativeEditorTests.xcodeproj/: project.pbxproj
ios/EditorCore.xcframework/: Info.plist
ios/Tests/: PositionBridgeTests.swift  RenderBridgeTests.swift  (+1 more)
rust/editor-core/: Cargo.toml
rust/editor-core/src/: collaboration.rs  editor.rs  lib.rs
rust/editor-core/src/position/: build.rs  mod.rs
rust/editor-core/src/render/: generate.rs  incremental.rs  mod.rs
rust/editor-core/src/serialize/: html_in.rs  html_out.rs
rust/editor-core/tests/: integration_test.rs  position_test.rs  render_test.rs  serialize_test.rs
scripts/: run-android-on-device.sh
src/: EditorTheme.ts  EditorToolbar.tsx  NativeEditorBridge.ts  NativeProseViewer.tsx  NativeRichTextEditor.tsx  YjsCollaboration.ts  addons.ts  heightCache.ts  index.ts
(+51 files in other folders)
