[package]
name = "editor-core"
version = "0.5.9"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "editor_core"

[dependencies]
uniffi = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1.13"
scraper = "0.21"
ego-tree = "0.9"
regex = "1"
yrs = { version = "0.25", features = ["sync"] }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"
required-features = ["cli"]

[features]
default = []
cli = ["uniffi/cli"]
crdt = [] # Phase 2

[[bench]]
name = "perf_suite"
harness = false
